--- a/templates/organization/edit_organization.twig
+++ b/templates/organization/edit_organization.twig
@@ -14,6 +14,11 @@
     <form method="post">
         <ul class="form-fields form-wrapper">
             <li>
+                <label>ID</label>
+                {{ organization.id|short_guid }}
+            </li>
+
+            <li>
                 {% set has_error = form_macros.hasError(errors, 'name') %}
                 <label for="name">Name</label>
                 <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="name" id="name" maxlength="100" value="{{ form.name }}" required>
