--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -10,6 +10,9 @@
 
 {% block breadcrumb_links %}
     <li><a href="{{ uriFor('applications') }}">Applications</a></li>
+    {% if application.organization -%}
+        <li><a href="{{ uriFor('organization', {'organization': application.organization.id}) }}">{{ application.organization.name }}</a></li>
+    {%- endif %}
 {% endblock %}
 
 {% block content %}
