Minor template updates and better github error handling

--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -80,7 +80,7 @@
 
         <li>
             <h6>Type</h6>
-            {{ credential|credential_type }}
+            {{ credential.formatType() }}
         </li>
 
         <li>
