--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -38,7 +38,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            {{ user.provider|idp_type }}
+                            {{ user.provider.formatType() }}
                         </td>
                         <td>
                             {{ user.name }}
