--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -49,7 +49,7 @@
                                 {{ macros.icon('locked') }}
                             {% endif %}
 
-                            {{ credential|credential_type }}
+                            {{ credential.formatType() }}
                         </td>
 
                         <td>{{ credential.name }}</td>
