--- a/templates/application/macros.twig
+++ b/templates/application/macros.twig
@@ -5,7 +5,7 @@
     <article class="card">
         <header class="card__header">
             <h4>
-                <a href="{{ uriFor('target', {'application': target.application.id, 'target': target.id}) }}">{{ target.format() }}</a>
+                <a href="{{ uriFor('target', {'application': target.application.id, 'target': target.id}) }}">{{ target.name }}</a>
 
                 {% if target.url %}
                     <a class="icon--link" href="{{ target.url }}">
