--- a/templates/partial.build_table.twig
+++ b/templates/partial.build_table.twig
@@ -48,7 +48,7 @@
         </tr>
     {% else %}
         <tr>
-            <td colspan="5">No builds found.</td>
+            <td colspan="5">No builds available.</td>
         </tr>
     {% endfor %}
     </tbody>
