--- a/templates/partial.pending_job_table.twig
+++ b/templates/partial.pending_job_table.twig
@@ -24,7 +24,7 @@
                     <td>
                         {{ job.environment ? job.environment.name : 'Any' }}
                         {%- if job.target -%}
-                            → {{ job.target.format() }}
+                            → {{ job.target.name }}
                         {%- endif -%}
                     </td>
 
