--- a/templates/queue/builds_history.twig
+++ b/templates/queue/builds_history.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 {% import 'macros.pagination.twig' as pagination %}
-{% import 'macros.git.twig' as git %}
+{% import 'macros.git.twig' as git_macros %}
 {% import 'macros.twig' as macros %}
 {% set js_components = ['job_table_updater'] %}
 
@@ -35,30 +35,22 @@
                 <th>Application</th>
                 <th>Env</th>
                 <th>Source Control</th>
-                <th class="table-priority-55">Built On</th>
+                <th>Built On</th>
             </tr>
         </thead>
         <tbody>
             {% for build in builds %}
                 <tr>
-                    <td>{{ macros.job_status_prefix(build) }}</td>
+                    <td>{{ macros.job_status_prefix(build, true) }}</td>
 
                     <td>
                         <a href="{{ uriFor('application.dashboard', {application: build.application.id}) }}">{{ build.application.name }}</a>
                     </td>
 
                     <td>{{ build.environment ? build.environment.name : 'Any' }}</td>
-                    <td>{{ git.gitref(build, true) }}</td>
+                    <td>{{ git_macros.vcs_ref(build.application, build) }}</td>
 
-                    <td class="table-priority-55">
-                        {% if build.user %}
-                            <a href="{{ uriFor('user', {'user': build.user.id}) }}">{{ build.user.username }}</a>
-                        {% else %}
-                            Unknown
-                        {% endif %}
-                    </td>
-
-                    <td class="table-priority-55">
+                    <td>
                         {{ build.created|html5date }}
                         by
                         {{ macros.user_display_link(build.user) }}
