--- a/templates/queue/releases_history.twig
+++ b/templates/queue/releases_history.twig
@@ -34,14 +34,13 @@
                 <th>Application</th>
                 <th>Env → Server</th>
                 <th>Build</th>
-                <th class="table-priority-55">User</th>
-                <th class="table-priority-50">Time</th>
+                <th>Deployed On</th>
             </tr>
         </thead>
         <tbody>
             {% for release in releases %}
                 <tr>
-                    <td>{{ macros.job_status_prefix(release) }}</td>
+                    <td>{{ macros.job_status_prefix(release, true) }}</td>
 
                     <td>
                         <a href="{{ uriFor('application.dashboard', {application: release.application.id}) }}">{{ release.application.name }}</a>
@@ -49,32 +48,26 @@
 
                     <td>
                         {% if release.target %}
-                            {{ release.target.group.environment.name }} → {{ release.target.format(true) }}
-                        {% else %}
-                            {{ release.build.environment ? release.build.environment.name : 'Any' }} → Unknown
-                        {% endif %}
-                    </td>
-
-                    <td>
-                        Build <a href="{{ uriFor('build', {'build': release.build.id}) }}">{{ release.build.id|formatBuildId }}</a>
-                    </td>
-
-                    <td class="table-priority-55">
-                        {% if release.user %}
-                            <a href="{{ uriFor('user', {'user': release.user.id}) }}">{{ release.user.username }}</a>
+                            {{ release.target.environment.name }} → {{ release.target.name }}
                         {% else %}
                             Unknown
                         {% endif %}
                     </td>
 
-                    <td class="table-priority-50">
+                    <td>
+                        Build <a href="{{ uriFor('build', {'build': release.build.id}) }}">{{ release.build.id|short_guid }}</a>
+                    </td>
+
+                    <td>
                         {{ release.created|html5date }}
+                        by
+                        {{ macros.user_display_link(release.user) }}
                     </td>
 
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="6">There are no releases available.</td>
+                    <td colspan="5">There are no releases available.</td>
                 </tr>
             {% endfor %}
         </tbody>
