--- a/templates/release/start_release.twig
+++ b/templates/release/start_release.twig
@@ -2,21 +2,19 @@
 {% import 'macros.twig' as macros %}
 {% import 'macros.git.twig' as git_macros %}
 {% import 'macros.form.twig' as form_macros %}
-{% import 'macros.start_deployment.twig' as deploy_macros %}
+{% import 'release/macros.start_deploy.twig' as deploy_macros %}
 
 {% set js_components = ['start_deployment'] %}
 
 {% set page_title = 'Start Deployment' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('applications') }}">Applications</a></li>
+    <li><a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a></li>
+    <li><a href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Dashboard</a></li>
+{% endblock %}
+
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Back to Application Dashboard</a>
-        </p>
-    </div>
-
     {{ block('meta') }}
 
     {% if selected_environment %}
@@ -52,19 +50,24 @@
     <ul class="meta-box">
         <li>
             <h6>Build ID</h6>
-            <a href="{{ uriFor('build', {'build': build.id}) }}">{{ build.id|shortGUID }}</a>
+            <a href="{{ uriFor('build', {'build': build.id}) }}">{{ build.id|short_guid }}</a>
+        </li>
+
+        {# todo #}
+        {% set is_gitref_current = githubCommitIsCurrent(build.application, build.reference, build.commit) %}
+        {# todo #}
+
+        <li>
+            <h6>Version Control</h6>
+            {{ git_macros.vcs_ref(build.application, build) }}
+            {{ git_macros.vcs_commit(build.application, build) }}
         </li>
 
         <li>
-            <h6>Source Code</h6>
-            {% set is_gitref_current = githubCommitIsCurrent(build.application.github.owner, build.application.github.repository, build.reference, build.commit) %}
-            {{ git_macros.gitref(build, false, is_gitref_current) }}
-            ({{ git_macros.gitcommit(build) }})
-        </li>
-
-        <li>
-            <h6>Time</h6>
-            {{ build.end|html5date ?: 'N/A' }}
+            <h6>Started</h6>
+            {{ build.created|html5date }}
+            by
+            {{ macros.user_display_link(build.user) }}
         </li>
     </ul>
 {% endblock %}
@@ -74,23 +77,21 @@
         This build can be deployed to any environment. You must select an environment to deploy it.
     </p>
 
-    <ul class="list--bare">
+    <p>
         {% for env in environments %}
-            <li>
-                <a class="btn" href="{{ uriFor('release.start', {'build': build.id}, {'environment': env.id}) }}">
-                    {% if env.isProduction %}
-                        {{ macros.icon('key') }}
-                    {% endif %}
-                    {{ env.name }}
-                </a>
-            </li>
+            <a class="btn" href="{{ uriFor('release.start', {'build': build.id}, {'environment': env.id}) }}">
+                {% if env.isProduction %}
+                    {{ macros.icon('key') }}
+                {% endif %}
+                {{ env.name }}
+            </a>
         {% endfor %}
-    </ul>
+    </p>
 {% endblock %}
 
 {% block deploy_form %}
 
-    {% if statuses %}
+    {% if targets %}
 
         <p>
             This build can be released to the following targets for this environment.
@@ -98,37 +99,37 @@
             where you wish to deploy to.
         </p>
 
-        {{ form_macros.formErrors(errors) }}
+        {{ form_macros.form_errors(errors, is_csrf_error) }}
 
         {% set pushables = 0 %}
-        {% set canUserPush = current_authorizations.canDeploy(build.application, selected_environment) %}
+        {% set can_user_deploy = current_authorizations.canDeploy(build.application, selected_environment) %}
 
-        {% for status in statuses %}
-            {% set inProgress = status.latest.status in ['pending', 'running', 'deploying'] %}
-            {% set needsCredentials = status.target.group.isAWS and not status.target.credential %}
+        {% for target in targets %}
+            {% set needs_credentials = target.isAWS and not target.credential %}
 
-            {% if canUserPush and not inProgress and not needsCredentials %}
+            {% if can_user_deploy and not target.lastJob.inProgress() and not needs_credentials %}
                 {% set pushables = pushables + 1 %}
             {% endif %}
         {% endfor %}
 
-
         <h2>Select Targets to be Deployed</h2>
-        {{ block('push_form_table') }}
+        {{ block('select_deploy_targets') }}
 
     {% else %}
         {{ macros.alert('error', 'This build cannot be deployed!', 'There are no deployments assigned to this environment.') }}
 
         <p>
-            <a class="btn btn--secondary" href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Cancel</a>
+            <a href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Return to application dashboard</a>
         </p>
 
     {% endif %}
 
 {% endblock %}
 
-{% block push_form_table %}
+{% block select_deploy_targets %}
     <form method="post">
+        {{ form_macros.csrf_input('release.start') }}
+
         <table class="table--spacing-medium">
             <thead>
                 <tr>
@@ -140,24 +141,21 @@
             </thead>
 
             <tbody>
-                {% for status in statuses %}
-                    {{ deploy_macros.render_deployment_row(status.target, status.release, selected, canUserPush, true) }}
+                {% for target in targets %}
+                    {{ deploy_macros.render_deployment_row(target, target.lastJob, selected, can_user_deploy, true) }}
                 {% endfor %}
             </tbody>
         </table>
 
-        <ul class="list--bare">
-            <li>
-                {% if pushables %}
-                    <input class="btn btn--action" type="submit" value="Deploy this Build" name="submit">
-                {% else %}
-                    {{ macros.disabled_button('Deploy this Build') }}
-                {% endif %}
-            </li>
-            <li>
-                <a class="btn" href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Cancel</a>
-            </li>
-        </ul>
+        <p>
+            {% if pushables %}
+                <button class="btn btn--action" type="submit">Deploy this Build</button>
+            {% else %}
+                {{ macros.disabled_button('Deploy this Build') }}
+            {% endif %}
+
+            <a href="{{ uriFor('application.dashboard', {'application': build.application.id}) }}">Cancel</a>
+        </p>
 
     </form>
 {% endblock %}
