Minor icon fix and new max length style

--- a/sass/utilities/_misc.scss
+++ b/sass/utilities/_misc.scss
@@ -13,3 +13,19 @@
 .fixed-nobreak {
     white-space: nowrap;
 }
+
+.maxch-10 {
+    max-width: 10ch;
+    @include limit-overflow-text();
+}
+
+.maxch-20 {
+    max-width: 20ch;
+    @include limit-overflow-text();
+}
+
+.maxch-30 {
+    max-width: 30ch;
+    @include limit-overflow-text();
+}
+
