--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -15,3 +15,10 @@
     margin-top: $top;
     margin-bottom: $bottom;
 }
+
+
+@mixin limit-overflow-text() {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
