--- a/templates/permissions/add_permission.twig
+++ b/templates/permissions/add_permission.twig
@@ -76,7 +76,7 @@
 
             <ul class="list--bare">
                 <li><input class="btn btn--action" type="submit" value="Add Permissions"></li>
-                <li><a class="btn" href="{{ uriFor('users.page1') }}">Cancel</a></li>
+                <li><a class="btn" href="{{ uriFor('users') }}">Cancel</a></li>
             </ul>
 
         </form>
