--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -17,7 +17,7 @@
 
         <p class="nav--page__back">
             <a class="btn btn--small btn--back" href="{{ uriFor('admin') }}">Back to Admin Dashboard</a>
-            <a class="btn btn--small btn--back" href="{{ uriFor('users.page1') }}">View all Users</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('users') }}">View all Users</a>
         </p>
     </div>
 
