--- a/templates/queue/queue_history.twig
+++ b/templates/queue/queue_history.twig
@@ -21,7 +21,7 @@
 {% block links %}
     <p>
         <a class="btn" href="{{ uriFor('queue') }}">Current Job Queue</a>
-        <a class="btn" href="{{ uriFor('builds.history.page1') }}">Build History</a>
-        <a class="btn" href="{{ uriFor('releases.history.page1') }}">Release History</a>
+        <a class="btn" href="{{ uriFor('builds.history') }}">Build History</a>
+        <a class="btn" href="{{ uriFor('releases.history') }}">Release History</a>
     </p>
 {% endblock %}
