--- a/templates/release/releases.twig
+++ b/templates/release/releases.twig
@@ -33,7 +33,7 @@
         <input class="btn" type="submit" value="Filter">
 
         {% if search_filter %}
-            <a class="btn btn--action" href="{{ uriFor('release.history.page1', {'application': application.id}) }}">Reset</a>
+            <a class="btn btn--action" href="{{ uriFor('release.history', {'application': application.id}) }}">Reset</a>
         {% endif %}
     </form>
 {% endblock %}
