--- a/templates/base.twig
+++ b/templates/base.twig
@@ -41,7 +41,7 @@
             {% block page_main %}
             <main>
                 {% block breadcrumb %}
-                    <ul class="breadcrumb">
+                    <ul class="breadcrumb mbm">
                         <li><a href="{{ uriFor('dashboard') }}">Home</a></li>
                         {% block breadcrumb_links %}{% endblock %}
                        <li>
