--- a/templates/queue/queue.twig
+++ b/templates/queue/queue.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Current Job Queue' %}
 
 {% block breadcrumb_links %}
-    <li><a href="{{ uriFor('queue.history.page1') }}">Queue History</a></li>
+    <li><a href="{{ uriFor('queue.history') }}">Queue History</a></li>
 {% endblock %}
 
 {% block content %}
@@ -15,7 +15,7 @@
 
 {% block links %}
     <p>
-        <a class="btn" href="{{ uriFor('builds.history.page1') }}">Build History</a>
-        <a class="btn" href="{{ uriFor('releases.history.page1') }}">Release History</a>
+        <a class="btn" href="{{ uriFor('builds.history') }}">Build History</a>
+        <a class="btn" href="{{ uriFor('releases.history') }}">Release History</a>
     </p>
 {% endblock %}
