--- a/templates/queue/releases_history.twig
+++ b/templates/queue/releases_history.twig
@@ -6,7 +6,7 @@
 {% set page_title = 'Release History' %}
 
 {% block breadcrumb_links %}
-    <li><a href="{{ uriFor('queue.history.page1') }}">Queue History</a></li>
+    <li><a href="{{ uriFor('queue.history') }}">Queue History</a></li>
 {% endblock %}
 
 {% block content %}
@@ -22,7 +22,7 @@
 {% block links %}
     <p>
         <a class="btn" href="{{ uriFor('queue') }}">Current Job Queue</a>
-        <a class="btn" href="{{ uriFor('builds.history.page1') }}">Build History</a>
+        <a class="btn" href="{{ uriFor('builds.history') }}">Build History</a>
     </p>
 {% endblock %}
 
