--- a/templates/base.twig
+++ b/templates/base.twig
@@ -15,9 +15,7 @@
             </title>
             {% endblock %}
             {% block page_icon %}
-                <!-- <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> -->
-                <!-- <link type="image/png" rel="icon" href="/hal.png"> -->
-                <link type="image/png" rel="shortcut icon" href="/hal.ico">
+                <link type="image/png" rel="icon" href="/hal.png">
             {% endblock %}
             {% block page_meta %}
                 <meta name="format-detection" content="telephone=no">
