--- a/templates/credentials/add_credential.twig
+++ b/templates/credentials/add_credential.twig
@@ -14,18 +14,26 @@
 
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
-    <form method="post" class="js-credentials-form">
+    <form method="post" class="js-credential-form">
         {{ form_macros.csrf_input('credential.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
                 <label>Credential Type</label>
                 <ul>
+                    {% set is_selected = form.type == '' ? ' checked' : '' %}
+                    <li>
+                        <label for="cred-noop">
+                            <input type="radio" id="cred-noop" name="type" value="" data-credential-select data-credential-type=""{{ is_selected }}>
+                            None
+                        </label>
+                    </li>
+
                     {% for credential_type in credential_options %}
                         <li>
                             {% set is_selected = form.type == credential_type ? ' checked' : '' %}
-                            <label for="{{ credential_type }}">
-                                <input type="radio" id="{{ credential_type }}" name="type" value="{{ credential_type }}" data-credential-select data-credential-type="{{ credential_type }}"{{ is_selected }}>
+                            <label for="cred-{{ credential_type }}">
+                                <input type="radio" id="cred-{{ credential_type }}" name="type" value="{{ credential_type }}" data-credential-select data-credential-type="{{ credential_type }}"{{ is_selected }}>
                                 {{ credential_type|credential_type }}
                             </label>
                         </li>
