--- a/templates/credentials/edit_credential.twig
+++ b/templates/credentials/edit_credential.twig
@@ -13,13 +13,21 @@
 {% block content %}
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
-    <form method="post" class="js-credentials-form">
+    <form method="post" class="js-credential-form">
         {{ form_macros.csrf_input('credential.edit') }}
 
         <ul class="form-fields form-wrapper">
             <li>
                 <label>Credential Type</label>
                 <ul>
+                    <li>
+                        {% set is_selected = form.type == '' ? ' checked' : '' %}
+                        <label for="cred-noop">
+                            <input type="radio" id="cred-noop" name="type" value="" data-credential-select data-credential-type=""{{ is_selected }}>
+                            None
+                        </label>
+                    </li>
+
                     {% for credential_type in credential_options %}
                         <li>
                             {% set is_selected = form.type == credential_type ? ' checked' : '' %}
